Add a preference to use the latest version of pcap2har.py .
When WebpageTest wants to update pcap2har.py, we do so in two phases.  In the first phase, we check it in to an experimental path, and only those agents that ask to use the experimental version use it.  In the second phase, we move the experimental version to stable, so all clients use it.  This change allows the android mobitest agent to opt in to the experimental version of pcap2har.py .

--- a/mobitest-agent/Android/BZAgent/res/values/strings.xml
+++ b/mobitest-agent/Android/BZAgent/res/values/strings.xml
@@ -32,4 +32,5 @@
 <string name="recording_important">Enable Screenshots</string>
 <string name="autopoll_on_start">Start Polling on Launch</string>
 <string name="restart_between_jobs">Restart Between Jobs</string>
+<string name="use_experimental_pcap2har">Test latest pcap2har</string>
 </resources>
