Add a preference to let the user control webview scaling.  Make the default work on Android 4.0
BUG=
TEST=Ran on a nexus  4g with Android 4.0 and 2.3.  Saw that webview looked good by efault on both.

Review URL: https://codereview.appspot.com/6344084

--- a/mobitest-agent/Android/BZAgent/res/values/strings.xml
+++ b/mobitest-agent/Android/BZAgent/res/values/strings.xml
@@ -33,4 +33,6 @@
     <string name="restart_between_jobs">Restart Between Jobs</string>
     <string name="use_experimental_pcap2har">Test latest pcap2har</string>
     <string name="process_hars_on_server">Process HARs on server</string>
+    <string name="initial_scale_for_webView">Scale percentage for webview</string>
+    <string name="initial_scale_for_webView_summary">Initial scale for webview.  Leave blank for a reasonable default.  Set to 0 for system default.</string>
 </resources>
